--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.username=vonlex
 spring.datasource.password=vonlexps
 
 spring.graphql.graphiql.enabled=true
+spring.graphql.cors.allowed-origins=*
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
